nginx-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-nodeport
spec:
  type: NodePort
  selector:
    app: nginx-deployment
  ports:
  - port: 80
    protocol: TCP
    name: web
    targetPort: web
    nodePort: 30001
